tests/negative/gold/export1_test.gold
tests/negative/export1_test.toit:4:8: error: Can't export prefix 'foo'
export foo
       ^~~
Compilation failed.
